host-network-ports/podfile-deny-hostPort.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-host-networking-ports-hostPort
  labels:
    app: pause-host-networking-ports-hostPort
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
    ports:
    - containerPort: 8080
      hostPort: 8080
